--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ div {
   margin:auto;
   font-family:"helvetica Neue";
   background:white;
-  padding:30;
+  padding:30px;
 }
 
 /* ID selector to select the element with id 'main-header' */
