--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Tag selector to select the 'body' element */
+<link rel="stylesheet" href="relative path to CSS file">
 body {
   /* Your code here! */
   background:#00b3e6;
