Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ div {
   /* Your code here! */
   width:700px;
   margin:auto;
-  font-family:"helvetica Neue";
+  font-family:"Helvetica Neue";
   background:white;
   padding:30px;
 }
